// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles TypeScript - fork checker 1`] = `
Object {
  "status": 0,
  "stderr": "(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (using Array property 'length' is deprecated)
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (indexing Array is deprecated)
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
Starting type checking service...
Using 1 worker with 2048MB memory limit
  size  name     module                                                       status
  1 kB  131      (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  168      ./js/SomeLibrary.ts                                          built
  1 kB  315      ./js/script.ts + 1 modules                                   built
  1 kB  324      (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built

  size  name     asset                                                        status
  1 kB  js       168.myBundle.min.js                                          emitted
  1 kB  map      168.myBundle.min.js.map                                      emitted
  1 kB  default  myBundle.min.js                                              emitted
  1 kB  default  myBundle.min.js.map                                          emitted

  (7 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript - fork checker 2`] = `
"(function(e,n){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=n();else if(\\"function\\"===typeof define&&define.amd)define([],n);else{var t=n();for(var r in t)(\\"object\\"===typeof exports?exports:e)[r]=t[r]}})(window,function(){return function(e,n){\\"use strict\\";var t={};function r(n){if(t[n])return t[n].exports;var o=t[n]={i:n,l:false,exports:{}};return e[n].call(o.exports,o,o.exports,r),o.l=true,o.exports}function o(){return r(315)}return r.m=e,n(r),o()}({131:function(e,n,t){\\"use strict\\";function r(e,n){for(var t=0;t<n.length;t++){var r=n[t];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(e,r.key,r)}}function o(e,n,t){return n&&r(e.prototype,n),t&&r(e,t),e}t.d(n,\\"b\\",function(){return o})},315:function(e,n,t){\\"use strict\\";t.r(n);var r=t(324);var o=t.n(r);var u=t(131);o=t.n(u);function i(e,n){return e+n}t.d(n,\\"default\\",function(){return c});var c=function(){function e(){o()(this,e),console.log(\\"init class\\")}return o()(e,[{key:\\"method\\",value:function(){console.log(i(2,4)),t.e(168).then(t.bind(null,168)).then(function(e){var n=new e.default;console.log(n.add(2,4))})}}]),e}()},324:function(e,n,t){\\"use strict\\";function r(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}t.d(n,\\"b\\",function(){return r})}},function(e){\\"use strict\\";!function(){var n=Object.prototype.hasOwnProperty;e.d=function(e,t,r){n.call(e,t)||Object.defineProperty(e,t,{enumerable:true,get:r})}}(),function(){e.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:true})}}(),function(){e.n=function(n){var t=n&&n.__esModule?function(){return n.default}:function(){return n};return e.d(t,\\"a\\",t),t}}(),function(){e.f={},e.e=function(n){return Promise.all(Object.keys(e.f).reduce(function(t,r){return e.f[r](n,t),t},[]))}}(),function(){e.p=\\"\\"}(),function(){e.u=function(e){return e+\\".myBundle.min.js\\"}}(),function(){var n={913:0};function t(t){var r=t[0];var o=t[1];var i=t[3];var c,a,f=0,l=[];for(;f<r.length;f++)a=r[f],n[a]&&l.push(n[a][0]),n[a]=0;for(c in o)Object.prototype.hasOwnProperty.call(o,c)&&(e.m[c]=o[c]);i&&i(e),u&&u(t);while(l.length)l.shift()()}e.f.j=function(t,r){var o=n[t];if(0!==o)if(o)r.push(o[2]);else{var u=new Promise(function(e,r){o=n[t]=[e,r]});r.push(o[2]=u);var i=e.p+e.u(t);var c=function(){if(n[t])return n[t][1];0!==n[t]&&(n[t]=void 0)};var a=document.createElement(\\"script\\");var f;a.charset=\\"utf-8\\",a.timeout=120,e.nc&&a.setAttribute(\\"nonce\\",e.nc),a.src=i;var l=new Error;f=function(e){a.onerror=a.onload=null,clearTimeout(s);var n=c();if(n){var r=e&&(\\"load\\"===e.type?\\"missing\\":e.type);var o=e&&e.target&&e.target.src;l.message=\\"Loading chunk \\"+t+\\" failed.\\\\n(\\"+r+\\": \\"+o+\\")\\",l.name=\\"ChunkLoadError\\",l.type=r,l.request=o,n(l)}};var s=setTimeout(function(){f({type:\\"timeout\\",target:a})},12e4);a.onerror=a.onload=f,document.head.appendChild(a)}};var r=window.webpackJsonp=window.webpackJsonp||[];var o=r.push.bind(r);r.push=t;var u=o}()})});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript - fork checker 3`] = `
"(window.webpackJsonp=window.webpackJsonp||[]).push([[168],{168:function(n,t,u){\\"use strict\\";u.r(t),u.d(t,\\"default\\",function(){return c});var e=u(324);var r=u(131);var c=function(){function n(){Object(e.b)(this,n)}return Object(r.b)(n,[{key:\\"add\\",value:function(n,t){return n+t}},{key:\\"substract\\",value:function(n,t){return n-t}},{key:\\"divide\\",value:function(n,t){return n/t}}]),n}()}}]);
//# sourceMappingURL=168.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 1`] = `
Object {
  "status": 0,
  "stderr": "(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (using Array property 'length' is deprecated)
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (indexing Array is deprecated)
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                                                       status
  1 kB  131      (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  168      ./js/SomeLibrary.ts                                          built
  1 kB  315      ./js/script.ts + 1 modules                                   built
  1 kB  324      (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built

  size  name     asset                                                        status
  1 kB  js       168.myBundle.min.js                                          emitted
  1 kB  map      168.myBundle.min.js.map                                      emitted
  1 kB  ts       js/Component.d.ts                                            emitted
  1 kB  ts       js/SomeLibrary.d.ts                                          emitted
  1 kB  ts       js/script.d.ts                                               emitted
  1 kB  default  myBundle.min.js                                              emitted
  1 kB  default  myBundle.min.js.map                                          emitted

  (7 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript 2`] = `
"(function(e,n){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=n();else if(\\"function\\"===typeof define&&define.amd)define([],n);else{var t=n();for(var r in t)(\\"object\\"===typeof exports?exports:e)[r]=t[r]}})(window,function(){return function(e,n){\\"use strict\\";var t={};function r(n){if(t[n])return t[n].exports;var o=t[n]={i:n,l:false,exports:{}};return e[n].call(o.exports,o,o.exports,r),o.l=true,o.exports}function o(){return r(315)}return r.m=e,n(r),o()}({131:function(e,n,t){\\"use strict\\";function r(e,n){for(var t=0;t<n.length;t++){var r=n[t];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(e,r.key,r)}}function o(e,n,t){return n&&r(e.prototype,n),t&&r(e,t),e}t.d(n,\\"b\\",function(){return o})},315:function(e,n,t){\\"use strict\\";t.r(n);var r=t(324);var o=t.n(r);var u=t(131);o=t.n(u);function i(e,n){return e+n}t.d(n,\\"default\\",function(){return c});var c=function(){function e(){o()(this,e),console.log(\\"init class\\")}return o()(e,[{key:\\"method\\",value:function(){console.log(i(2,4)),t.e(168).then(t.bind(null,168)).then(function(e){var n=new e.default;console.log(n.add(2,4))})}}]),e}()},324:function(e,n,t){\\"use strict\\";function r(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}t.d(n,\\"b\\",function(){return r})}},function(e){\\"use strict\\";!function(){var n=Object.prototype.hasOwnProperty;e.d=function(e,t,r){n.call(e,t)||Object.defineProperty(e,t,{enumerable:true,get:r})}}(),function(){e.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:true})}}(),function(){e.n=function(n){var t=n&&n.__esModule?function(){return n.default}:function(){return n};return e.d(t,\\"a\\",t),t}}(),function(){e.f={},e.e=function(n){return Promise.all(Object.keys(e.f).reduce(function(t,r){return e.f[r](n,t),t},[]))}}(),function(){e.p=\\"\\"}(),function(){e.u=function(e){return e+\\".myBundle.min.js\\"}}(),function(){var n={913:0};function t(t){var r=t[0];var o=t[1];var i=t[3];var c,a,f=0,l=[];for(;f<r.length;f++)a=r[f],n[a]&&l.push(n[a][0]),n[a]=0;for(c in o)Object.prototype.hasOwnProperty.call(o,c)&&(e.m[c]=o[c]);i&&i(e),u&&u(t);while(l.length)l.shift()()}e.f.j=function(t,r){var o=n[t];if(0!==o)if(o)r.push(o[2]);else{var u=new Promise(function(e,r){o=n[t]=[e,r]});r.push(o[2]=u);var i=e.p+e.u(t);var c=function(){if(n[t])return n[t][1];0!==n[t]&&(n[t]=void 0)};var a=document.createElement(\\"script\\");var f;a.charset=\\"utf-8\\",a.timeout=120,e.nc&&a.setAttribute(\\"nonce\\",e.nc),a.src=i;var l=new Error;f=function(e){a.onerror=a.onload=null,clearTimeout(s);var n=c();if(n){var r=e&&(\\"load\\"===e.type?\\"missing\\":e.type);var o=e&&e.target&&e.target.src;l.message=\\"Loading chunk \\"+t+\\" failed.\\\\n(\\"+r+\\": \\"+o+\\")\\",l.name=\\"ChunkLoadError\\",l.type=r,l.request=o,n(l)}};var s=setTimeout(function(){f({type:\\"timeout\\",target:a})},12e4);a.onerror=a.onload=f,document.head.appendChild(a)}};var r=window.webpackJsonp=window.webpackJsonp||[];var o=r.push.bind(r);r.push=t;var u=o}()})});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript 3`] = `
"(window.webpackJsonp=window.webpackJsonp||[]).push([[168],{168:function(n,t,u){\\"use strict\\";u.r(t),u.d(t,\\"default\\",function(){return c});var e=u(324);var r=u(131);var c=function(){function n(){Object(e.b)(this,n)}return Object(r.b)(n,[{key:\\"add\\",value:function(n,t){return n+t}},{key:\\"substract\\",value:function(n,t){return n-t}},{key:\\"divide\\",value:function(n,t){return n/t}}]),n}()}}]);
//# sourceMappingURL=168.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 4`] = `
"export default class SomeLibrary {
    add(a: any, b: any): any;
    substract(a: any, b: any): number;
    divide(a: any, b: any): number;
}
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (using Array property 'length' is deprecated)
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (indexing Array is deprecated)
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name     module                          status
  1 kB  505      ./js/typescript.ts + 2 modules  built failed ✖

  size  name     asset                           status
  1 kB  ts       js/typescript.d.ts
  1 kB  default  myTSBundle.min.js
  1 kB  default  myTSBundle.min.js.map

  (2 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts
  14:0  error  Parsing error: Unexpected token. A constructor, method, accessor, or property was expected

✖ 1 problem (1 error, 0 warnings)

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts(14,1)
      TS1068: Unexpected token. A constructor, method, accessor, or property was expected.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

",
}
`;

exports[`Fails gracefully on invalid TS - fork checker 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (using Array property 'length' is deprecated)
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (indexing Array is deprecated)
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
Starting type checking service...
Using 1 worker with 2048MB memory limit
  size  name     module                          status
  1 kB  505      ./js/typescript.ts + 2 modules  built failed ✖

  size  name     asset                           status
  1 kB  default  myTSBundle.min.js
  1 kB  default  myTSBundle.min.js.map

  (2 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`Fails gracefully on invalid TS 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (using Array property 'length' is deprecated)
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (indexing Array is deprecated)
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name     module                          status
  1 kB  505      ./js/typescript.ts + 2 modules  built failed ✖

  size  name     asset                           status
  1 kB  ts       js/typescript.d.ts
  1 kB  default  myTSBundle.min.js
  1 kB  default  myTSBundle.min.js.map

  (2 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts(5,17)
      TS2339: Property 'someNonExistingMethod' does not exist on type 'D'.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

",
}
`;

exports[`Lints TypeScript with webpack 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (using Array property 'length' is deprecated)
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (indexing Array is deprecated)
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                                                       status
  1 kB  131      (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  168      ./js/SomeLibrary.ts                                          built failed ✖
  1 kB  315      ./js/script.ts + 1 modules                                   built failed ✖
  1 kB  324      (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built

  size  name     asset                                                        status
  1 kB  js       168.myBundle.min.js
  1 kB  map      168.myBundle.min.js.map
  1 kB  ts       js/Component.d.ts
  1 kB  ts       js/SomeLibrary.d.ts
  1 kB  ts       js/script.d.ts
  1 kB  default  myBundle.min.js
  1 kB  default  myBundle.min.js.map

  (7 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  2:1  error  Prefer default export                                               @swissquote/swissquote/import/prefer-default-export
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

✖ 3 problems (3 errors, 0 warnings)
  2 errors and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/SomeLibrary.ts
  10:15  error  Delete \`⏎·\`  @swissquote/swissquote/prettier/prettier

✖ 1 problem (1 error, 0 warnings)
  1 error and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`                   @swissquote/swissquote/prettier/prettier
   5:1   error    Replace \`····constructor·\` with \`··constructor\`        @swissquote/swissquote/prettier/prettier
   6:5   warning  Unexpected console statement                           no-console
   7:1   error    Insert \`·\`                                             @swissquote/swissquote/prettier/prettier
  10:5   warning  Unexpected console statement                           no-console
  10:17  error    Replace \`·test(·\` with \`test(\`                         @swissquote/swissquote/prettier/prettier
  12:34  error    Replace \`·(SomeLibrary)·=>⏎···\` with \`SomeLibrary·=>\`  @swissquote/swissquote/prettier/prettier
  16:7   warning  Unexpected console statement                           no-console
  17:7   error    Insert \`;\`                                             @swissquote/swissquote/prettier/prettier

✖ 9 problems (6 errors, 3 warnings)
  6 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 3 problems (3 errors, 0 warnings)

",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stderr": "(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (using Array property 'length' is deprecated)
(node:11111) DeprecationWarning: Chunk.files was changed from Array to Set (indexing Array is deprecated)
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                       status
  1 kB  479      ./js/index.ts + 3 modules    built

  size  name     asset                        status
  1 kB  ts       js/imported-typescript.d.ts  emitted
  1 kB  ts       js/index.d.ts                emitted
  1 kB  default  myBundle.min.js              emitted
  1 kB  default  myBundle.min.js.map          emitted

  (2 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
